--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,11 @@ body {
     min-height: 100vh;
 }
 
+html {
+    font-size: 100%;
+    font-family: 'Nanum Gothic', sans-serif;
+}
+
 /* header */
 header {
     display: flex;
@@ -33,9 +38,10 @@ header {
 }
 
 #logo-header span {
-    font-size: 20px;
+    font-size: 1rem;
     font-weight: 800;
     color: rgba(26, 25, 25);
+    font-family: 'Domine', sans-serif;
 }
 
 i {
@@ -77,10 +83,10 @@ footer {
     background-color: black;
 }
 
-body > footer {
+body>footer {
     position: sticky;
     top: 100vh;
-  }
+}
 
 #logo-footer {
     margin-bottom: 1em;
@@ -99,9 +105,10 @@ footer a {
 }
 
 footer h4 {
-    text-decoration: underline;
+    border-bottom: 2px solid white;
     text-decoration-color: white;
     margin-bottom: 5px;
+    font-size: 0.8rem;
 }
 
 footer a {
@@ -110,6 +117,7 @@ footer a {
 
 footer li {
     list-style: none;
+    font-size: 0.7rem;
 }
 
 footer .col {
@@ -120,15 +128,44 @@ footer .col {
 #top-image {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    background-image: url("../image/home-image.jpg");
+    justify-content: space-evenly;
     background-repeat: no-repeat;
     background-position: 50% 55%;
     background-size: cover;
+    animation: change-img 30s ease infinite;
     /* Photo by <a href="https://unsplash.com/@joshuaryanphoto?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Joshua Reddekopp</a> on <a href="https://unsplash.com/s/photos/fashion?orientation=landscape&utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> */
-  
+    /* Photo by <a href="https://unsplash.com/@_thedl?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">David Lezcano</a> on <a href="https://unsplash.com/s/photos/fashion-men?orientation=landscape&utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> */
+    /* Photo by <a href="https://unsplash.com/@huntersrace?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Hunters Race</a> on <a href="https://unsplash.com/s/photos/fashion-men?orientation=landscape&utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> */
     width: 100%;
     height: 40vh;
+    padding: 0.5em;
+}
+
+@keyframes change-img {
+    0% {
+        background-image: url("../image/home-image1.jpg");
+    }
+
+    40% {
+        background-image: url("../image/home-image2.jpg");
+    }
+
+    80% {
+        background-image: url("../image/home-image3.jpg");
+    }
+
+    100% {
+        background-image: url("../image/home-image1.jpg");
+    }
+}
+
+#top-image h1 {
+    font-size: 3rem;
+    font-family: 'Domine', sans-serif;
+}
+
+#top-image p {
+    font-size: 1rem;
 }
 
 #top-image h1,
@@ -136,12 +173,21 @@ footer .col {
     color: white;
 }
 
-#shop-now {
-    width: 100px;
+#top-image .shop-now {
+    width: 7rem;
+    padding: 0.5rem;
+    font-size: 1rem;
+    text-align: center;
+    background-color: black;
+}
+
+#top-image .shop-now a {
+    text-decoration: none;
+    color: white;
 }
 
 #featured {
-    margin-top: 2em;
+    margin-top: 1rem;
     text-align: center;
 }
 
@@ -153,6 +199,10 @@ footer .col {
     display: flex;
     flex-direction: row;
     overflow-x: scroll;
+}
+
+#featured p {
+    margin-bottom: 0.5rem;
 }
 
 #featured .product {
@@ -201,7 +251,7 @@ footer .col {
 }
 
 #store-info img {
-    width :100%;
+    width: 100%;
 }
 
 #store-info .store-address {
@@ -210,22 +260,22 @@ footer .col {
 }
 
 /* products */
-    /* Photo by <a href="https://unsplash.com/@austin_wade?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Austin Wade</a> on <a href="https://unsplash.com/s/photos/fashion-men?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> */
-    /* Photo by <a href="https://unsplash.com/@mahdibafande?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Mahdi Bafande</a> on <a href="https://unsplash.com/s/photos/fashion-men?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> */
-    /* Photo by <a href="https://unsplash.com/fr/@mohamadkhosravi?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Mohamad Khosravi</a> on <a href="https://unsplash.com/s/photos/fashion-men?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> */
-    /* Photo by <a href="https://unsplash.com/@chernus_tr?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Taras Chernus</a> on <a href="https://unsplash.com/s/photos/fashion-men?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> */
-    /* Photo by <a href="https://unsplash.com/@nixcreative?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Tyler Nix</a> on <a href="https://unsplash.com/s/photos/fashion-men?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> */
-    /* Photo by <a href="https://unsplash.com/@ulrichderboven?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Ulrich Derboven</a> on <a href="https://unsplash.com/s/photos/fashion-men?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> */
-  
+/* Photo by <a href="https://unsplash.com/@austin_wade?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Austin Wade</a> on <a href="https://unsplash.com/s/photos/fashion-men?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> */
+/* Photo by <a href="https://unsplash.com/@mahdibafande?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Mahdi Bafande</a> on <a href="https://unsplash.com/s/photos/fashion-men?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> */
+/* Photo by <a href="https://unsplash.com/fr/@mohamadkhosravi?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Mohamad Khosravi</a> on <a href="https://unsplash.com/s/photos/fashion-men?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> */
+/* Photo by <a href="https://unsplash.com/@chernus_tr?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Taras Chernus</a> on <a href="https://unsplash.com/s/photos/fashion-men?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> */
+/* Photo by <a href="https://unsplash.com/@nixcreative?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Tyler Nix</a> on <a href="https://unsplash.com/s/photos/fashion-men?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> */
+/* Photo by <a href="https://unsplash.com/@ulrichderboven?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Ulrich Derboven</a> on <a href="https://unsplash.com/s/photos/fashion-men?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> */
+
 /* store */
-    /* Photo by <a href="https://unsplash.com/@mercantile?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Clark Street Mercantile</a> on <a href="https://unsplash.com/s/photos/store?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> */
-    /* Photo by <a href="https://unsplash.com/@nxvision?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Nigel Tadyanehondo</a> on <a href="https://unsplash.com/s/photos/store?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> */
-  
+/* Photo by <a href="https://unsplash.com/@mercantile?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Clark Street Mercantile</a> on <a href="https://unsplash.com/s/photos/store?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> */
+/* Photo by <a href="https://unsplash.com/@nxvision?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Nigel Tadyanehondo</a> on <a href="https://unsplash.com/s/photos/store?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> */
+
 /* image2,3 */
-    /* Photo by <a href="https://unsplash.com/@sebastianpoc?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Sebastian Pociecha</a> on <a href="https://unsplash.com/s/photos/fashion-man?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> */
-    /* Photo by <a href="https://unsplash.com/@hustwilson?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Huston Wilson</a> on <a href="https://unsplash.com/s/photos/fashion-man?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> */
-  
-  
+/* Photo by <a href="https://unsplash.com/@sebastianpoc?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Sebastian Pociecha</a> on <a href="https://unsplash.com/s/photos/fashion-man?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> */
+/* Photo by <a href="https://unsplash.com/@hustwilson?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Huston Wilson</a> on <a href="https://unsplash.com/s/photos/fashion-man?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> */
+
+
 
 /* shop.html */
 #pagination {
@@ -245,13 +295,22 @@ footer .col {
 #pagination i {
     font-size: 1em;
     color: white;
-} 
+}
 
 #shop-container {
     display: flex;
     flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
+}
+
+#shop-container a {
+    text-decoration: none;
+    color: black;
+}
+
+.description h5 {
+    color: rgba(0, 0, 0, 0.5);
 }
 
 /* product.html */
@@ -263,16 +322,25 @@ footer .col {
     width: 95%;
 }
 
+#single-product .price {
+    margin: 0.5rem 0;
+    font-size: 1.5rem;
+}
+
 #single-product .product-details {
-    margin: 1em;
+    margin: 0.5rem;
+}
+
+#single-product .product-details h3 {
+    margin: 0.3rem 0;
 }
 
 #single-product .product-details p {
-    line-height: 2em;
+    line-height: 1rem;
 }
 
 #single-product .regular-image {
-    width:75%;
+    width: 75%;
 }
 
 #single-product .small-image img,
@@ -287,43 +355,108 @@ footer .col {
     width: 24%;
 }
 
+.select-decision {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.add-cart {
+    margin-left: 1rem;
+    padding: 0.5rem;
+    background-color: black;
+    color: white;
+}
+
+.cloth-size {
+    padding: 0.5rem;
+    width: 8rem;
+}
+
 /* tablet size */
 @media screen and (min-width:768px) {
+
     /* index.html */
     #top-image {
         height: 90vh;
+        justify-content: center;
     }
+
+    #top-image .shop-now {
+        margin-top: 0.5rem;
+    }
+
+    html {
+        font-size: 150%;
+    }
+
     #store-info {
         display: flex;
         flex-direction: row;
     }
+
     #store-info img {
         width: 55%;
     }
+
     #store-info .store-address {
         width: 45%;
     }
+
     /* shop.html */
+    .description h3,
+    .description h4,
+    .description h5 {
+        font-size: 50%;
+    }
+
+    /* product.html */
     #single-product {
         margin: 2em auto;
         display: flex;
         flex-direction: row;
         justify-content: center;
         width: 95%;
+        height: max-content;
     }
+
+    #single-product .product-description {
+        height: max-content;
+        /* min-height: 30vh; */
+        /* overflow-y: auto; */
+    }
+
+    #single-product .images {
+        width: 55%;
+        height: max-content;
+    }
+
     #single-product .product-details {
-        margin: 1em auto;
-        padding: 1em;
+        /* margin: auto; */
+        padding: 0.5rem;
+        width: 45%;
+    }
+
+    #single-product .product {
+        /* font-size: 30%; */
     }
 }
 
-/*  */
+/* cart.html */
+
+#cart-container {
+    display: flex;
+    overflow: auto;
+    white-space: nowrap;
+    height: 60vh;
+}
 
 #cart-container table {
     width: 100%;
+    min-width: 700px;
     border-collapse: collapse;
     table-layout: fixed;
-    white-space: nowrap;
+    margin-top: 1em;
 }
 
 #cart-container table img {
@@ -331,7 +464,7 @@ footer .col {
 }
 
 #cart-container table td:nth-child(1) {
-    width: 100px;
+    width: 30px;
     text-align: center;
 }
 
@@ -341,7 +474,7 @@ footer .col {
 }
 
 #cart-container table td:nth-child(3) {
-    width: 100px;
+    width: 150px;
     text-align: center;
 }
 
@@ -366,7 +499,7 @@ footer .col {
 }
 
 #cart-container table td:nth-child(6) input {
-    width: 70px;
+    width: 50px;
     text-align: center;
     padding: 10px 5px 10px 15px;
 }
@@ -377,7 +510,7 @@ footer .col {
     border-right: none;
 }
 
-#cart-container table thead td {
+#cart-container table thead th {
     font-weight: 700;
     font-size: 13px;
     padding: 18px 0;
@@ -389,4 +522,32 @@ footer .col {
 
 #cart-container table tbody td {
     font-size: 13px;
+}
+
+/* user.html */
+#user-info {
+    width: 70vw;
+    max-width: 500px;
+    min-width: 300px;
+    margin: 2rem auto;
+    padding-bottom: 2em;
+}
+
+#user-info label {
+    display: block;
+    margin: 0.3rem 0;
+}
+
+#user-info input {
+    margin: 10px 0 0 0;
+    width: 100%;
+    min-height: 3em;
+}
+
+#user-info .user-details {
+    margin: 10px 0 0 0;
+    width: 100%;
+    min-height: 3em;
+    border: 1px solid #cce7d0;
+    border-radius: 5px;
 }
