--- a/css/style.css
+++ b/css/style.css
@@ -442,7 +442,6 @@ footer .col {
 /* cart.html */
 
 #cart-container {
-    display: flex;
     overflow: auto;
     white-space: nowrap;
     height: 60vh;
@@ -502,14 +501,23 @@ footer .col {
 }
 
 #cart-container table thead {
+    background-color: white;
+    position: sticky;
+    top: 0;
+}
+
+#cart-container table thead::before {
+    content: "";
+    position: absolute;
+    top: -1px;
+    left: -1px;
+    width: 100%;
+    height: 100%;
     border: 1px solid #e2e9e1;
     border-left: none;
     border-right: none;
 }
 
-#cart-container table thead tr {
-    height: 20vh;
-}
 
 #cart-container table thead th {
     font-weight: 700;
@@ -556,7 +564,6 @@ footer .col {
 
 /* like.html */
 #like-container {
-    display: flex;
     overflow: auto;
     white-space: nowrap;
     height: 60vh;
@@ -595,13 +602,20 @@ footer .col {
 }
 
 #like-container table thead {
+    position: sticky;
+    top: 0;
+}
+
+#like-container table thead::before {
+    content: "";
+    position: absolute;
+    top: -1px;
+    left: -1px;
+    width: 100%;
+    height: 100%;
     border: 1px solid #e2e9e1;
     border-left: none;
     border-right: none;
-}
-
-#like-container table thead tr {
-    height: 20vh;
 }
 
 #like-container table thead th {
